# coco-logging

./: main.py  pyproject.toml
logging_configs/: 3-homework-filtered-stdout-stderr.yaml
logs/: my_app.log.jsonl
